--- a/resetPro.css
+++ b/resetPro.css
@@ -14,7 +14,7 @@
   --color-secundario : #181818;   */
   
     /* Tipografía */
-    --tipo-principal   : Helvetica, Arial, sans-serif;
+    --tipo-principal   : 'Montserrat', sans-serif;
     --tipo-secundaria  : Verdana;
   }
     
