Redes sociales modal

--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -200,7 +200,7 @@
 
     .nosotros__imagenUno {
         width: 100%;
-        
+
     }
 
     /* texto e imagen Dos */
@@ -227,7 +227,7 @@
 
     .nosotros__imagenDos {
         width: 100%;
-    
+
     }
 
 
@@ -354,13 +354,13 @@
     .popup__card {
         display: flex;
         flex-direction: column;
-        height: 80%;
+        height: 90%;
         max-height: 800px;
     }
 
     .popup__img {
         width: 100%;
-        height: 40%;
+        height: 30%;
     }
 
     .popup__text {
@@ -514,7 +514,7 @@
             'article   article   article'
             'nosotros  nosotros  nosotros'
             'mision    mision    mision'
-            'aside     aside     aside'
+            'aside     aside     aside '
             'section   section   section'
             'form      form      form'
             'footer    footer    footer';
@@ -663,34 +663,34 @@
         justify-content: space-between;
     }
 
-    .nosotros__textoUno{
+    .nosotros__textoUno {
         order: 1;
         width: 100%;
         text-align: center;
     }
 
-    .nosotros__parrafo--uno{
+    .nosotros__parrafo--uno {
         line-height: 22px;
         text-align: justify;
     }
 
-    .nosotros__imagenUno{
+    .nosotros__imagenUno {
         order: 2;
         padding: 10px;
     }
 
-    .nosotros__textoDos{
+    .nosotros__textoDos {
         order: 3;
         width: 100%;
         text-align: center;
     }
 
-    .nosotros__parrafo--dos{
+    .nosotros__parrafo--dos {
         line-height: 22px;
         text-align: justify;
     }
 
-    .nosotros__imagenDos{
+    .nosotros__imagenDos {
         order: 4;
     }
 
@@ -908,6 +908,7 @@
     /*Sobre nosotros*/
     .footer__texto1 {
         text-align: center;
+        margin: 0 auto;
     }
 
     .footer__reuniones {
@@ -951,17 +952,71 @@
     }
 
     .footer__grupo2 {
-        font-size: 18px;
+        font-size: 14px;
         color: white;
+        margin: 0 auto;
     }
 
 }
 
 /*Small devices (landscape phones, less than 768px)*/
 @media only screen and (max-width: 460px) {
+
     .header__titulo {
         font-size: 10px;
         font-weight: 300;
         letter-spacing: 3px;
+    }
+
+    /* Modal */
+
+    .popup__img {
+        width: 100%;
+        background-image: url(img/alabanza3.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+
+    .popup__text {
+        width: 90%;
+        height: auto;
+        padding: 30px;
+        margin: 0 auto;
+    }
+
+    .popup__text h1 {
+        font-size: 20px;
+        color: black;
+        text-align: center;
+    }
+
+
+    .popup__text p {
+        font-family: 'Montserrat', sans-serif;
+        color: black;
+        margin-top: 16px;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .popup__social {
+        display: flex;
+        text-decoration: none;
+        text-align: center;
+        justify-content: center;
+        transition: all 300ms ease;
+        padding: 0;
+
+
+    }
+
+    .popup__social a {
+        padding: 10px;
+        color: black;
+
+    }
+
+    .popup__social a:hover {
+        color: aqua;
     }
 }
