--- a/style.css
+++ b/style.css
@@ -1119,7 +1119,7 @@ article[id] {
 }
 
 .footer__parrafo {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   letter-spacing: 2px;
   font-size: 14px;
