--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -173,10 +173,30 @@
 
     /* Nosotros */
     .nosotros {
-        gap: 10px;
+        grid-area: nosotros;
+        width: 100%;
+        height: auto;
+        /* background-color: #DFDBE5; */
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+        row-gap: 20px;
+        column-gap: 20px;
+        align-items: center;
+        justify-content: center;
+        padding: 0px;
+        overflow: hidden;
+
     }
 
     /* texto e imagen Uno */
+    .nosotros__textoUno {
+       
+        text-align: center;
+        padding: 40px;
+        margin: 0 auto;
+    }
 
     .nosotros__titulo--uno {
         font-size: 50px;
@@ -189,21 +209,27 @@
     }
 
     .nosotros__parrafo--uno {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 300;
         letter-spacing: 0px;
-        font-size: 14px;
-        line-height: 18px;
-        margin-top: 1em;
-        text-align: left;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: justify;
+
     }
 
-    .nosotros__imagenUno {
-        width: 100%;
-
+    .nosotros__imagenUno {   
+        width: 80%;
+        margin: 0 auto;
     }
 
     /* texto e imagen Dos */
+    .nosotros__textoUno {
+       
+        text-align: center;
+        padding: 40px;
+        margin: 0 auto;
+    }
 
     .nosotros__titulo--dos {
         font-size: 50px;
@@ -216,17 +242,18 @@
     }
 
     .nosotros__parrafo--dos {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 300;
         letter-spacing: 0px;
-        font-size: 14px;
-        line-height: 18px;
-        margin-top: 1em;
-        text-align: right;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: justify;
     }
 
     .nosotros__imagenDos {
-        width: 100%;
+        width: 80%;
+        margin: 0 auto;
+        order: 4;
 
     }
 
@@ -584,15 +611,17 @@
     }
 
     .main__titulo {
-        font-size: 42px;
+        font-size: 35px;
+        letter-spacing: 1px;
     }
 
     .main__tituloPre {
-        font-size: 20px;
+        font-size: 19px;
     }
 
     .main__tituloSub {
-        font-size: 15px;
+        font-size: 14px;
+        letter-spacing: 2px;
     }
 
     .main__btn {
@@ -642,57 +671,12 @@
     }
 
     .article__card svg {
-        width: 80vw;
-        top: 190px;
+        top: 230px;
+        left: -60px;
     }
 
 
     /* Nosotros */
-
-    .nosotros {
-        grid-area: nosotros;
-        width: 100%;
-        height: auto;
-        background-color: rgba(187, 176, 176, 0.302);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
-        row-gap: 20px;
-        column-gap: 20px;
-        align-items: baseline;
-        justify-content: space-between;
-    }
-
-    .nosotros__textoUno {
-        order: 1;
-        width: 100%;
-        text-align: center;
-    }
-
-    .nosotros__parrafo--uno {
-        line-height: 22px;
-        text-align: justify;
-    }
-
-    .nosotros__imagenUno {
-        order: 2;
-        padding: 10px;
-    }
-
-    .nosotros__textoDos {
-        order: 3;
-        width: 100%;
-        text-align: center;
-    }
-
-    .nosotros__parrafo--dos {
-        line-height: 22px;
-        text-align: justify;
-    }
-
-    .nosotros__imagenDos {
-        order: 4;
-    }
 
 
     /* estructura de texto y foto */
@@ -714,7 +698,7 @@
     }
 
     .mision__tituloPre {
-        font-size: 20px;
+        font-size: 18px;
         font-family: 'Cardo', serif;
         font-weight: 100;
         margin-bottom: 0 0 8px 0;
@@ -728,8 +712,6 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 900;
         text-align: center;
-        line-height: 1.2em;
-        margin-top: 10px;
         color: white;
     }
 
@@ -738,7 +720,8 @@
         font-weight: 400;
         letter-spacing: 5px;
         text-align: center;
-        margin-top: 10px;
+        line-height: 1px;
+        margin-bottom: 40px;
         color: white;
 
     }
@@ -749,6 +732,7 @@
         padding: 0;
         line-height: 23px;
         color: white;
+        text-align: justify;
     }
 
     .mision__imagen {
@@ -965,7 +949,7 @@
     .header__titulo {
         font-size: 10px;
         font-weight: 300;
-        letter-spacing: 3px;
+        letter-spacing: 2px;
     }
 
     /* Modal */
@@ -1041,7 +1025,8 @@
     .footer__correo {
         display: block;
     }
-    .footer__correo i{
+
+    .footer__correo i {
         display: none;
     }
 
@@ -1070,7 +1055,8 @@
     .footer__reuniones {
         display: block;
     }
-    .footer__reuniones i{
+
+    .footer__reuniones i {
         display: none;
     }
 
@@ -1100,7 +1086,8 @@
     .footer__ubicacion {
         display: block;
     }
-    .footer__ubicacion i{
+
+    .footer__ubicacion i {
         display: none;
     }
 
@@ -1109,7 +1096,8 @@
         align-items: flex-start;
         justify-content: start;
     }
-    .footer__social a{
+
+    .footer__social a {
         font-size: 20px;
     }
 
