--- a/style.css
+++ b/style.css
@@ -405,12 +405,12 @@ article[id] {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  row-gap: 20px;
-  column-gap: 20px;
-  align-items: baseline;
+  align-items: flex-start;
   justify-content: center;
-  padding: 20px;
+  
+  padding: 0px;
+ 
+  overflow: hidden;
 
 }
 
@@ -418,13 +418,13 @@ article[id] {
 .nosotros__textoUno {
   width: 100%;
   color: black;
-  padding: 50px;
-  text-align: left;
+  padding: 60px;
+  
   /* background-color: var(--color-dos); */
 }
 
 .nosotros__titulo--uno {
-  font-size: 80px;
+  font-size: 50px;
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
   letter-spacing: 15px;
@@ -434,22 +434,22 @@ article[id] {
   font-size: 13px;
   font-weight: 400;
   letter-spacing: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .nosotros__parrafo--uno {
   font-family: 'Montserrat', sans-serif;
-  letter-spacing: 1px;
-  font-size: 16px;
+  letter-spacing: 2px;
+  font-size: 14px;
   line-height: 21px;
-  margin-top: 2em;
-  text-align: left;
+  margin-top: 20px;
+  text-align: justify;
 }
 
 .nosotros__imagenUno {
-  width: 600px;
-  height: 600px;
-  padding: 20px;
+  width: 100%;
+  height: auto;
+  padding: 40px;
 }
 
 /* texto e imagen Dos */
@@ -457,7 +457,7 @@ article[id] {
 .nosotros__textoDos {
   width: 100%;
   color: black;
-  padding: 50px;
+  padding: 60px;
   text-align: right;
   /* background-color: var(--color-tres); */
 
@@ -465,32 +465,32 @@ article[id] {
 
 
 .nosotros__titulo--dos {
-  font-size: 80px;
+  font-size: 50px;
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
   letter-spacing: 15px;
 }
 
 .nosotros__tituloSub--dos {
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
-  letter-spacing: 5px;
+  letter-spacing: 20px;
   margin-top: 20px;
 }
 
 .nosotros__parrafo--dos {
   font-family: 'Montserrat', sans-serif;
-  letter-spacing: 1px;
-  font-size: 16px;
+  letter-spacing: 2px;
+  font-size: 14px;
   line-height: 21px;
-  margin-top: 2em;
-  text-align: right;
+  margin-top: 20px;
+  text-align: justify;
 }
 
 .nosotros__imagenDos {
-  width: 600px;
-  height: 600px;
-  padding: 20px;
+  width: 100%;
+  height: auto;
+  padding: 40px;
 }
 
 
