--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -95,7 +95,7 @@
     }
 
     .navbar__link {
-        letter-spacing: 10px;
+        letter-spacing: 13px;
         padding: 1em;
     }
 
@@ -180,7 +180,6 @@
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-
         row-gap: 20px;
         column-gap: 20px;
         align-items: center;
@@ -192,66 +191,71 @@
 
     /* texto e imagen Uno */
     .nosotros__textoUno {
-       
-        text-align: center;
-        padding: 40px;
+        width: 95%;
         margin: 0 auto;
     }
 
     .nosotros__titulo--uno {
-        font-size: 50px;
+        font-size: 90px;
+        letter-spacing: 0;
+        margin: 0 auto;
+        text-align: center;
     }
 
     .nosotros__tituloSub--uno {
         font-size: 10px;
-        letter-spacing: 10px;
-        margin-top: 10px;
+        font-weight: 600;
+        letter-spacing: 15px;
+        text-align: center;
+        margin: 25px auto;
     }
 
     .nosotros__parrafo--uno {
         font-family: 'Montserrat', sans-serif;
         font-weight: 300;
         letter-spacing: 0px;
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 16px;
+        line-height: 20px;
         text-align: justify;
 
     }
 
     .nosotros__imagenUno {   
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
     }
 
     /* texto e imagen Dos */
-    .nosotros__textoUno {
-       
-        text-align: center;
-        padding: 40px;
+    .nosotros__textoDos {
+        width: 95%;
         margin: 0 auto;
     }
 
     .nosotros__titulo--dos {
-        font-size: 50px;
+        font-size: 90px;
+        letter-spacing: 0;
+        margin: 0 auto;
     }
 
     .nosotros__tituloSub--dos {
         font-size: 10px;
-        letter-spacing: 10px;
-        margin-top: 10px;
+        font-weight: 600;
+        letter-spacing: 15px;
+        text-align: center;
+        margin: 25px auto;
     }
 
     .nosotros__parrafo--dos {
         font-family: 'Montserrat', sans-serif;
         font-weight: 300;
         letter-spacing: 0px;
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 16px;
+        line-height: 20px;
         text-align: justify;
     }
 
     .nosotros__imagenDos {
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
         order: 4;
 
