--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat; */
   background-color: whitesmoke;
+ 
 
 }
 
@@ -30,6 +31,7 @@ article[id] {
 .contenedor {
   width: 95vw;
   max-width: 65em;
+  
   margin: 1.2em auto;
   grid-gap: .7em;
   display: grid;
@@ -63,6 +65,7 @@ article[id] {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .header::before {
@@ -87,6 +90,7 @@ article[id] {
   text-align: left;
   color: white;
   z-index: 1;
+ 
 }
 
 
@@ -408,9 +412,7 @@ article[id] {
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-start;
   justify-content: center;
-  
   padding: 0px;
- 
   overflow: hidden;
 
 }
@@ -450,7 +452,8 @@ article[id] {
 .nosotros__imagenUno {
   width: 100%;
   height: auto;
-  padding: 40px;
+  padding: 0px;
+  /* border: 5px solid white; */
 }
 
 /* texto e imagen Dos */
@@ -491,7 +494,8 @@ article[id] {
 .nosotros__imagenDos {
   width: 100%;
   height: auto;
-  padding: 40px;
+  padding: 0px;
+  /* border: 5px solid white; */
 }
 
 
@@ -712,10 +716,11 @@ article[id] {
 }
 
 .iglesia__titulo {
-  font-size: 52px;
+  font-size: 65px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin: 15px auto;
+  letter-spacing: 10px;
 
 }
 
@@ -729,14 +734,10 @@ article[id] {
   font-size: 15px;
   font-weight: 400;
   letter-spacing: 10px;
-}
 
-.iglesia__linea {
-  width: 90px;
-  height: 2px;
-  background-color: var(--color-uno);
-  text-align: center;
-  margin: 15px auto;
+  font-size: 1em;
+  margin-top: 30px;
+  letter-spacing: 10px;
 }
 
 .iglesia__contenedor {
@@ -1079,6 +1080,7 @@ article[id] {
   padding: 15px 30px;
   text-align: justify;
   color: #fff;
+
 
 }
 
