--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -967,6 +967,13 @@
 /*Small devices (landscape phones, less than 768px)*/
 @media only screen and (max-width: 460px) {
 
+    .loader__imagen{
+        width: 80px;
+    }
+    .loader__texto{
+        font-size: 12px;
+    }
+
     .header__titulo {
         font-size: 10px;
         font-weight: 600;
