--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat; */
   background-color: whitesmoke;
- 
+
 
 }
 
@@ -31,7 +31,7 @@ article[id] {
 .contenedor {
   width: 95vw;
   max-width: 65em;
-  
+
   margin: 1.2em auto;
   grid-gap: .7em;
   display: grid;
@@ -53,6 +53,55 @@ article[id] {
 }
 
 
+
+/*Louder*/
+
+.loader__contenedor {
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader__imagen {
+  width: 100px;
+  height: auto;
+  z-index: 99999;
+}
+
+.loader__texto {
+  display: block;
+  font-family: monospace;
+  font-size: 15px;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 30ch;
+
+  animation: typing 2s steps(12), blink .5s infinite step-end alternate;
+  overflow: hidden;
+}
+
+@keyframes typing{
+  from { width: 0 }
+}
+
+@keyframes blink {
+  50% { border-color: transparent  }
+}
+
+
+
+
+
+
 /*header*/
 .header {
   width: 100%;
@@ -65,7 +114,7 @@ article[id] {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .header::before {
@@ -90,7 +139,7 @@ article[id] {
   text-align: left;
   color: white;
   z-index: 1;
- 
+
 }
 
 
@@ -422,7 +471,7 @@ article[id] {
   width: 100%;
   color: black;
   padding: 60px;
-  
+
   /* background-color: var(--color-dos); */
 }
 
@@ -1076,7 +1125,7 @@ article[id] {
 
 /*Comunidad*/
 .footer__texto {
-  
+
   padding: 15px 30px;
   text-align: justify;
   color: #fff;
