--- a/style.css
+++ b/style.css
@@ -90,12 +90,16 @@ article[id] {
   overflow: hidden;
 }
 
-@keyframes typing{
-  from { width: 0 }
+@keyframes typing {
+  from {
+    width: 0
+  }
 }
 
 @keyframes blink {
-  50% { border-color: transparent  }
+  50% {
+    border-color: transparent
+  }
 }
 
 
@@ -192,7 +196,7 @@ article[id] {
 .navbar__link--activo {
   /* border-bottom: 2px solid var(--color-cuatro); */
   color: var(--color-tres);
-  
+
 
 }
 
@@ -457,8 +461,8 @@ article[id] {
   grid-area: nosotros;
   width: 100%;
   height: auto;
-  /* background-color: #DFDBE5; */
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-color: #DFDBE5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-start;
@@ -482,7 +486,7 @@ article[id] {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   letter-spacing: 15px;
-  
+
 }
 
 .nosotros__tituloSub--uno {
@@ -504,7 +508,7 @@ article[id] {
 .nosotros__imagenUno {
   width: 100%;
   height: auto;
-  padding: 0px;
+  padding: 20px;
   /* border: 5px solid white; */
 }
 
@@ -525,6 +529,7 @@ article[id] {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   letter-spacing: 15px;
+  line-height: 50px;
 }
 
 .nosotros__tituloSub--dos {
@@ -546,7 +551,7 @@ article[id] {
 .nosotros__imagenDos {
   width: 100%;
   height: auto;
-  padding: 0px;
+  padding: 20px;
   /* border: 5px solid white; */
 }
 
@@ -577,6 +582,7 @@ article[id] {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+
 }
 
 .mision::before {
@@ -755,7 +761,8 @@ article[id] {
   justify-content: center;
   position: relative;
   text-align: center;
-  background-color: white;
+  background-color: #f5f2f8;
+  background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 
 }
 
